[package]
name = "npm-bumpall"
version = "0.1.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }


[dev-dependencies]
serial_test = "0.10.0"