[package]
name = "npm-bumpall"
version = "0.1.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde_json = "1"


[dev-dependencies]
serial_test = "2"
